<resources>
    <string name="app_name">The Clothing Empire</string>
    <string name="content_description">image</string>
    <string name="title_login">LOGIN</string>
    <string name="et_hint_email_id">Email ID</string>
    <string name="et_hint_password">Password</string>
    <string name="lbl_forgot_password">Forgot Password?</string>
    <string name="btn_lbl_login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register"><u>Register</u></string>
    <string name="create_an_account">CREATE AN ACCOUNT</string>
    <string name="about_us_body">We are trying to develop an end-to-end platform for ease of use in the clothing/fashion industry. We have currently started the open testing of "The clothing empire B2B" app which provides an interface between the wholesaler and the retailer focusing on small scale business. We are also planning to launch B2C app to provide an opportunity for the local shops to enter the virtual shopping world to enable them to compete with traditional online shopping MNC.</string>
    <string name="contact_Details">For any questions or comments, please reach out by clicking the following contacts.</string>
    <string name="hint_last_name">Last name</string>
    <string name="phone_number">9611773393</string>
    <string name="hint_first_name">First name</string>
    <string name="et_hint_confirm_password">Confirm Password</string>

    <string name="i_agree_to_the_terms_and_condition">I Agree To The <u> Terms &amp; Condition </u></string>
    <string name="btn_lbl_register">Register</string>

    <string name="already_have_an_account">Already have an account?</string>
    <string name="login"><u>Login</u></string>
    <string name="err_msg_enter_first_name">Please enter first name.</string>
    <string name="err_msg_enter_last_name">Please enter last name.</string>
    <string name="err_msg_enter_email">Please enter email.</string>
    <string name="err_msg_enter_password">Please enter password.</string>
    <string name="err_msg_enter_confirm_password">Please enter confirm password.</string>
    <string name="err_msg_password_and_confirm_password_mismatch">Password and confirm password does not match.</string>
    <string name="err_msg_agree_terms_and_condition">Please agree terms and condition.</string>
    <string name="err_msg_password_minimum_length">Password should contain at least 6 characters </string>
    <string name="et_shop_code">Enter Shop Code</string>
    <string name="reset_password">Please Enter your registered email id to reset your password</string>
    <string name="btn_reset_password">Reset password</string>
    <string name="err_msg_enter_shop_contact">enter shop contact</string>
    <string name="err_msg_enter_shop_name">enter shop name</string>
    <string name="err_msg_enter_gst_number">enter gst number</string>
    <string name="err_msg_enter_shop_password">enter shop password</string>
    <string name="err_msg_enter_confirm_shop_password">enter confirm shop password</string>
    <string name="err_msg_shop_password_minimum_length">shop password should be atleast 6 characters long</string>
    <string name="err_msg_shop_password_and_confirm_password_mismatch">shop passwords should match</string>
    <string name="title_complete_profile">COMPLETE PROFILE</string>
    <string name="et_hint_mobile_number">Mobile Number</string>
    <string name="rb_lbl_male">MALE</string>
    <string name="rb_lbl_female">FEMALE</string>
    <string name="btn_lbl_save">Save</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="title_home">Products</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Orders</string>
    <string name="action_settings">Settings</string>
    <string name="title_settings">Setting</string>
    <string name="lbl_edit">Edit</string>
    <string name="lbl_addresses">Addresses</string>
    <string name="btn_lbl_logout">Logout</string>
    <string name="action_add_products">Add Products</string>
    <string name="title_add_product">Add Product</string>
    <string name="err_msg_enter_product_description">Please enter Product Description</string>
    <string name="err_msg_enter_product_price">Please Enter Product Price</string>
    <string name="err_msg_enter_product_quantity">Please Enter Product Quantity</string>
    <string name="err_msg_enter_product_title">Please Enter Product Title</string>
    <string name="err_msg_upload_product_image">Please Upload Product Image</string>
    <string name="et_hint_product_title">Enter Product Title</string>
    <string name="et_hint_product_price">Enter Product Price in Rs.</string>
    <string name="et_hint_product_description">Enter Product Description</string>
    <string name="et_hint_product_quantity">Enter Product Quantity</string>
    <string name="btn_lbl_submit">Save</string>
    <string name="no_products_added_yet">No Products Added Yet</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_dashboard_item_found">No Dashboard Item Found</string>
    <string name="title_product_details">PRODUCT DETAILS</string>
    <string name="lbl_product_description">Product Description</string>
    <string name="lbl_product_details_stock_quantity">Stock Quantity</string>
    <string name="btn_lbl_add_to_cart">Add To Cart</string>
    <string name="btn_lbl_go_to_cart">Go To Cart</string>
    <string name="title_my_cart">MY CART</string>
    <string name="no_cart_item_found">No item found in cart!</string>
    <string name="lbl_subtotal">Subtotal</string>
    <string name="lbl_shipping_charge">GST</string>
    <string name="lbl_total_amount">Total Amount</string>
    <string name="btn_lbl_checkout">Checkout</string>
    <string name="action_cart">My Cart</string>
    <string name="out_of_stock">Out  Of Stock</string>
    <string name="title_address_list">Shop LIST</string>
    <string name="no_address_found">No Address Found!</string>
    <string name="lbL_add_address">Add Shop</string>

    <string name="title_add_address">ADD Shop</string>
    <string name="hint_full_name">Full name</string>
    <string name="hint_phone_number">Phone number</string>
    <string name="hint_address">Address</string>
    <string name="hint_zip_code">ZipCode</string>
    <string name="hint_additional_note">Additional note</string>
    <string name="hint_other_details">Other details</string>
    <string name="lbl_home">HOME</string>
    <string name="lbl_office">OFFICE</string>
    <string name="lbl_other">OTHER</string>


    <string name="err_msg_please_enter_full_name">Please enter full name.</string>
    <string name="err_msg_please_enter_phone_number">Please enter phone number.</string>
    <string name="err_msg_please_enter_address">Please enter address.</string>
    <string name="err_msg_please_enter_zip_code">Please enter zip-code.</string>
    <string name="err_msg_please_enter_other_details">Please enter other details.</string>

    <string name="err_your_address_added_successfully">Your address is added successfully.</string>
    <string name="title_checkout">CHECKOUT</string>
    <string name="checkout_lbl_product_items">Product Items</string>
    <string name="checkout_lbl_selected_address">Selected Address</string>
    <string name="checkout_lbl_items_receipt">Items Receipt</string>
    <string name="lbl_payment_mode">Payment Mode</string>
    <string name="lbl_cash_on_delivery">Cash On Delivery</string>
    <string name="btn_lbl_place_order">PLACE ORDER</string>
    <string name="no_orders_placed_yet">No Orders Placed Yet</string>
    <string name="order_status_in_process">In Process</string>
    <string name="order_status_delivered">Delivered</string>
    <string name="title_my_order_details">MY ORDER DETAILS</string>
    <string name="order_details_lbl">Order Details</string>
    <string name="order_details_lbl_order_id">Order ID</string>
    <string name="order_details_lbl_order_date">Order Date</string>
    <string name="order_details_lbl_order_status">Order Status</string>
    <string name="order_status_pending">Pending</string>
    <string name="order_details_lbl_shipping_address">Shipping Address</string>
    <string name="title_sold_products">Sold Products</string>
    <string name="no_products_sold_out_yet">No Products Sold Out Yet</string>
    <string name="title_sold_product_details">Sold  Product List</string>
    <string name="et_hint_product_max_delivery_time">Maximum Days To Deliver</string>
    <string name="enter_size">Select Size</string>
    <string name="lbl_no_of_variants">Number Of Variants Available</string>
    <string name="material_used">Materials Used</string>
    <string name="title_activity_wsdashboard">WSDashboardActivity</string>
    <string name="default_notification_channel_id">clothing_empire_channel_id</string>
    <string name="email_id_Clothing_empire">theclothingempire1@gmail.com</string>
    <string name="clothing_empire_blog">https://theclothingempire.blogspot.com/</string>
</resources>