<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation2"
    app:startDestination="@+id/navigation_sold_product">

    <fragment
        android:id="@+id/navigation_products"
        android:name="com.clothingempire.clothingempire.ui.fragments.ProductsFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_products" />




    <fragment
        android:id="@+id/navigation_sold_product"
        android:name="com.clothingempire.clothingempire.ui.fragments.SoldProductsFragment"
        android:label="@string/title_sold_products"
        tools:layout="@layout/fragment_sold_products" />
    <fragment
        android:id="@+id/ws_navigation_dashboard"
        android:name="com.clothingempire.clothingempire.ui.activities.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />
</navigation>