<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.LogInActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_header"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/shape_button_rounded"
        android:id="@+id/cl_header">
        <ImageView
            android:layout_width="@dimen/logo_size"
            android:layout_height="@dimen/logo_height_size"
            android:src="@drawable/logo_new"
            app:layout_constraintTop_toTopOf="@id/cl_header"
            app:layout_constraintBottom_toTopOf="@id/app_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:scaleType="fitXY"/>
        <com.clothingempire.clothingempire.customwidgets.BoldTextView
            android:id="@+id/app_name"
            android:text="@string/app_name"
            android:textColor="@color/pallete_four"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/log_in_header_font_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:paddingBottom="20sp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <com.clothingempire.clothingempire.customwidgets.BoldTextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/reset_password"
        android:gravity="center_horizontal"
        android:textColor="@color/pallete_one"
        android:textSize="@dimen/title_textSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cl_header" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_email"
        style="@style/outlineBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/et_hint_email_id"
        android:textColorHint="@color/pallete_Two"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title">

        <com.clothingempire.clothingempire.customwidgets.CEEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:padding="@dimen/et_padding"
            android:textColor="@color/pallete_one"
            android:textSize="@dimen/et_textSize"
            tools:text="abc@gmail.com" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.clothingempire.clothingempire.customwidgets.CEButton
        android:id="@+id/btn_reset_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="16dp"
        android:foreground="?attr/selectableItemBackground"
        android:gravity="center"
        android:paddingTop="@dimen/btn_padding"
        android:paddingBottom="@dimen/btn_padding"
        android:text="@string/btn_reset_password"
        android:textColor="@android:color/white"
        android:textSize="@dimen/btn_textSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_email" />


</androidx.constraintlayout.widget.ConstraintLayout>